moduledir = $(pythondir)/getit
module_PYTHON = __main__.py \
		dialogs/dialog.py \
		windows/mainwindow.py \
		elements/authentication.py \
		elements/body.py \
		elements/body_key_value_pair.py \
		elements/cookies.py \
		elements/header_key_value_pair.py \
		elements/headers.py \
		elements/response.py

-include $(top_srcdir)/git.mk
