cmake_minimum_required(VERSION 3.15 FATAL_ERROR)

set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES MACOSX_BUNDLE TRUE)
set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES RESOURCE "./packaging/macos/icons/getit.icns")

set(CPACK_BUNDLE_NAME ${CMAKE_PROJECT_NAME})
set(CPACK_BUNDLE_PLIST ./packaging/macos/Info.plist)
set(CPACK_BUNDLE_ICON ./packaging/macos/icons/getit.icns)

install(TARGETS ${CMAKE_PROJECT_NAME} BUNDLE DESTINATION ./bin/${CMAKE_PROJECT_NAME}.app)
set(CPACK_INSTALL_CMAKE_PROJECTS "./bin/${CMAKE_PROJECT_NAME}.app;${CMAKE_PROJECT_NAME};ALL;/")
set(CPACK_COMPONENT_LIBRARIES_DEPENDS Boost::system)
set(CPACK_COMPONENT_LIBRARIES_DEPENDS cpprest)
set(CPACK_COMPONENT_LIBRARIES_DEPENDS nlohmann_json)
